# assignment1-basics

./: .gitattributes  .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  Cargo.toml  DECODING_IMPLEMENTATION.md  DECODING_SOLUTION_SUMMARY.md  EXPERIMENT_LOGGING_IMPLEMENTATION.md  activation_memory_derivation.md  adamw_calculations_detailed.md  adamw_detailed_solution.md  adamw_resource_accounting.md  deliverable_summary.md  demo_decoding.py  evaluate_validation.py  generate_deliverable_plots.py  generate_sample_text.py  pyproject.toml  run_lr_sweep.py  test_decoding.py  test_decoding_with_trained_model.py  test_experiment_logging.py  train.py  train_bpe_tinystories.py  train_with_logging.py  transformer_accounting.py
artifacts/checkpoints/: checkpoint_000025.pt  checkpoint_000050.pt  checkpoint_final.pt  config.json
artifacts/demo_checkpoints/: demo_checkpoint.pt
checkpoints/lr_3e-4_fixed_tokenizer/: checkpoint_000500.pt  config.json  (+3 more)
cs336_basics/: logger.py  nn.py  optimizer.py  pretokenization_example.py  tokenizer.py
cs336_basics/bpe_trainer/: Cargo.toml
cs336_basics/bpe_trainer/medium_small_vocab/: merges.txt  vocab.json
cs336_basics/bpe_trainer/owt_results_1k/: merges.txt  vocab.json
cs336_basics/bpe_trainer/owt_results_32k/: merges.txt  vocab.json
cs336_basics/bpe_trainer/small_test_optimized/: merges.txt  vocab.json
cs336_basics/bpe_trainer/test_simple/: merges.txt  vocab.json
cs336_basics/tokenizers/bpe_cli/: Cargo.toml  test_small.txt
cs336_basics/tokenizers/bpe_cli/src/: main.rs  main_optimized.rs  main_tokenizer.rs  main_trainer.rs  save_optimized.rs  tokenizer_optimized.rs
cs336_basics/tokenizers/bpe_pymodule/: Cargo.toml  pyproject.toml  rust_tokenizer.py
cs336_basics/tokenizers/bpe_pymodule/src/: lib.rs  lib_backup.rs
data/: sample.txt
demos/: demo_decoding.py  demo_experiment_logging.py  demo_training_together.py  scheduler_integration_example.py
logs/: config.json  metadata.json  metadata_final.json  metrics.csv  metrics.json
results/: transformer_accounting_results.txt
tests/: adapters.py  conftest.py
training/: train.py  train_with_logging.py
(+35 files in other folders)
