[package]
name = "bpe_trainer"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "bpe_trainer"
path = "src/main_trainer.rs"

[[bin]]
name = "bpe_tokenizer"
path = "src/main_tokenizer.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
onig = "6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
rayon = "1.10"
indexmap = "2.0"
fxhash = "0.2"
smallvec = "1.11"
lru = "0.12"
regex = "1.10"