[package]
name = "rust_tokenizer"
version = "0.4.0"
edition = "2021"

[lib]
name = "rust_tokenizer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
onig = "6.4"
rayon = "1.10"
hashbrown = "0.15"
fnv = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
pyo3-build-config = "0.22"